<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackSurface">

    <!-- line header -->
    <ir.kitgroup.request.core.utils.component.Header
        android:id="@+id/hfBusinessSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableImgTwoHeader="@drawable/ic_back"
        app:isShowImgTwoHeader="true"
        app:isShowSeparatorHeader="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textTitleHeader="@string/label_business_side" />

    <LinearLayout
        android:id="@+id/llTabButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_size"
        android:layout_marginTop="@dimen/small_size"
        android:background="@null"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/hfBusinessSide">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnOrderGiver"
            style="@style/MediumBoldTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_unselected_tab"
            android:gravity="center"
            android:padding="@dimen/medium_size"
            android:text="@string/label_order_giver"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnOrderReceiver"
            style="@style/MediumBoldTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_small_size"
            android:layout_weight="1"
            android:background="@drawable/bg_selected_tab"
            android:gravity="center"
            android:padding="@dimen/medium_size"
            android:text="@string/label_order_receiver"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- line recyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCustomer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_size"
        app:layout_constraintBottom_toTopOf="@+id/cvAddBusinessSide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTabButtons"
        tools:itemCount="2"
        tools:listitem="@layout/item_business_side_list" />

    <!-- line info -->
    <ir.kitgroup.request.core.utils.component.Info
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:translationZ="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cvAddBusinessSide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hfBusinessSide"
        app:message="@string/msg_no_data" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAddBusinessSide"
        style="@style/RoundedCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_size"
        app:cardBackgroundColor="@color/green_21BF73"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/medium_size">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAdd"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/MediumBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_size"
                android:gravity="start"
                android:text="@string/label_add_business_side"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivAdd"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
