<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackSurface">

    <!-- line header -->
    <ir.kitgroup.request.core.utils.component.Header
        android:id="@+id/hfProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableImgTwoHeader="@drawable/ic_back"
        app:isShowImgTwoHeader="true"
        app:isShowSeparatorHeader="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textTitleHeader="@string/label_commodity" />

    <!-- line recyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProduct"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_size"
        app:layout_constraintBottom_toTopOf="@+id/cvAddProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hfProduct"
        tools:itemCount="2"
        tools:listitem="@layout/item_product_list" />

    <!-- line info -->
    <ir.kitgroup.request.core.utils.component.Info
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:translationZ="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cvAddProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hfProduct"
        app:message="@string/msg_no_data" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAddProduct"
        style="@style/RoundedCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_size"
        app:cardBackgroundColor="@color/green_21BF73"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/medium_size">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAdd"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/MediumBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_size"
                android:gravity="start"
                android:text="@string/label_add_product"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivAdd"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
